--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
   "author": "darqtom <dariusztomczyszyn@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.2.1",
     "mongoose": "^6.0.14",
     "validator": "^13.7.0"
   },
   "scripts": {
-    "start": "node src.index.js",
-    "dev": "nodemon src/index.js"
+    "start": "node -r esm src.index.js",
+    "dev": "nodemon -r esm src/index.js"
   },
-  "type": "module",
   "devDependencies": {
     "nodemon": "^2.0.15"
   }
