--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.2.1",
     "mongoose": "^6.0.14",
+    "multer": "^1.4.3",
+    "sharp": "^0.29.3",
     "validator": "^13.7.0"
   },
   "scripts": {
