--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   },
   "scripts": {
     "start": "node -r esm src.index.js",
-    "dev": "nodemon -r esm src/index.js"
+    "dev": "env-cmd -f ./config/dev.env nodemon -r esm src/index.js"
   },
   "devDependencies": {
+    "env-cmd": "^10.1.0",
     "nodemon": "^2.0.15"
   }
 }
