--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "start": "node -r esm src.index.js",
     "dev": "env-cmd -f ./config/dev.env nodemon -r esm src/index.js",
-    "test": "env-cmd -f ./config/test.env jest",
+    "test": "env-cmd -f ./config/test.env jest --runInBand",
     "test:watch": "yarn run test --watch",
     "test:coverage": "yarn run test --coverage"
   },
